12982: Not enough space in displaying logged in username: Fix username spacing

--- a/src/platform/site-wide/sass/merger.scss
+++ b/src/platform/site-wide/sass/merger.scss
@@ -377,8 +377,9 @@
 
   .vet-toolbar {
     .va-dropdown {
-      margin-left: -2rem;
-      width: 128px;
+      span {
+        white-space: nowrap;
+      }
     }
   }
 
